# sdr-dsp-playground

./: .gitignore  README.md  danyok.ipynb  hilber_transform.py  jj.ipynb  requirements.txt  timing.ipynb
docs/katex/: katex.md
docs/snippets/: CMakeLists.snpt
msm/: .gitignore  viterbi.rar
msm/ofdm/: ascii_work.m
msm/ofdm/functions/: README.md  ascii_decode.m  ascii_encode.m  ascii_table.m  can_ascii_encode.m  conv_codec_tables.m  conv_decoder.m  conv_encoder.m
sdr_projects/AdPluto/: CMakeLists.txt
sdr_projects/AdPluto/.conf_ini/: pluto_ini_conf.txt
sdr_projects/AdPluto/src/app/: main.cpp
sdr_projects/AdPluto/src/lib/PlutoDevice/: CMakeLists.txt
sdr_projects/AdPluto/src/lib/PlutoDevice/include/IPluto/: Device.hpp  Types.hpp
sdr_projects/AdPluto/src/lib/PlutoDevice/src/: helpers.hpp
sdr_projects/AdPluto/src/lib/PlutoDevice/src/class/: PlutoDevice.cpp
sdr_projects/AdPluto/src/lib/RingBuffer/: CMakeLists.txt
sdr_projects/AdPluto/src/lib/RingBuffer/docs/: README.md
sdr_projects/AdPluto/src/lib/RingBuffer/include/: RingBuffer.hpp
sdr_projects/AdPluto/src/lib/RingBuffer/src/: RingBuffer.cpp
sdr_projects/AdPluto/src/lib/RingBuffer/tests/: testBufferPerfomance.cpp
sdr_projects/AdPluto/src/libs/pluto_api/: CMakeLists.txt
sdr_projects/AdPluto/src/libs/pluto_api/include/: pluto_api.hpp
sdr_projects/AdPluto/src/libs/pluto_api/src/: pluto_api.cpp
sdr_projects/QPSK/theory/: pc_qpsk.ipynb  qpsk.ipynb
things/discrete_signal/: note.ipynb
